# rust-book-notes

./: README.md  binpow.py
closure_iterator/: Cargo.toml
closure_iterator/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
error/: Cargo.toml
error/src/: main.rs
intro/: Cargo.toml
intro/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
module/: Cargo.toml
module/src/: front_of_house.rs  lib.rs
module/src/front_of_house/: hosting.rs
structs/: Cargo.toml
structs/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: integration_test.rs
tests/tests/common/: mdd.rs  mod.rs
traits/: Cargo.toml
traits/src/: lib.rs  main.rs
