[package]
name = "structs"
version = "0.1.0"
authors = ["iamlockon <xdddxyyyxzzz123@gmail.com>"]
edition = "2018"

[cargo-new]
name = "iamlockon"
email = "xdddxyyyxzzz123@gmail.com"
vcs = "git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
